Правки, паттерн DTO. Отделение ответа от сущности БД